frontend-service/src/layout.scss
$break-small: 768px;
$break-large: 1224px;
$footer-height: 60px;
$tablet-landscape-up: "only screen and (min-width : 768px)";
$desktop-up: "only screen and (min-width : 1224px)";

%phone-side-margins {
  margin-left: 1rem;
  margin-right: 1rem;

  @media only screen and (min-width : $break-small) {
    margin-left: unset;
    margin-right: unset;
  }
}

%common-page-heading-positioning {
  @extend %phone-side-margins;
  margin-bottom: .5rem;
  margin-top: 0;
}

